tests/invalid_run/ini/ini04.java
class Main {
    static void run() {
        int a;
        int b = 4 + a + 2;
    }
}
